--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"autoprefixer": "10.4.16",
 		"eslint": "8.50.0",
 		"eslint-config-next": "13.5.2",
+		"html2canvas": "^1.4.1",
 		"jotai": "^2.4.2",
 		"next": "13.5.2",
 		"postcss": "8.4.30",
